--- a/index.html
+++ b/index.html
@@ -19,17 +19,15 @@
 
     <button type="button" class="btn btn-primary" onclick="colarMascara('azul')">Azul</button>
     <button type="button" class="btn btn-warning" onclick="colarMascara('amarelo')">Amarelo</button>
-
-  </div>
-  <div class="camarada">
-    <div class="imagem">
-      <div class="mascara top"><img src="" alt=""></div>
-      <img class="foto"/>
-      <div class="mascara bottom"><img src="" alt=""></div>
-    </div>
+    <a id="download" download="image.png">download</a>
   </div>
 
-  <button onclick="download()">download</button>
+  <div class="imagem">
+    <div class="mascara top"><img src="" alt=""></div>
+    <img class="foto"/>
+    <div class="mascara bottom"><img src="" alt=""></div>
+  </div>
+
 
 
   <script src="http://localhost:4500/livereload.js" charset="utf-8"></script>
